# remote-access

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE.txt  PROTOCOL.md  README.md  oc-remote-access.md  package-lock.json  package.json  protocol-v0.md  remote-attestation.md
.claude/: CLAUDE.md
.github/workflows/: ci.yml  release.yml
crates/.claude/claude_temp/: settings.local.json
crates/ap-cli/: Cargo.toml
crates/ap-cli/src/: main.rs
crates/ap-cli/src/command/: connect.rs  connections.rs  listen.rs  mod.rs  output.rs  run.rs  tui.rs  util.rs
crates/ap-cli/src/providers/: bitwarden.rs  example.rs  mod.rs
crates/ap-cli/src/storage/: connection_storage.rs  identity_storage.rs  memory_session_store.rs  mod.rs  psk_storage.rs  session_storage.rs
crates/ap-client/: Cargo.toml
crates/ap-client/src/: compat.rs  error.rs  lib.rs  memory_connection_store.rs  memory_session_store.rs  proxy.rs  traits.rs  types.rs
crates/ap-client/src/clients/: remote_client.rs  user_client.rs
crates/ap-client/tests/: pairing.rs  websocket_proxy.rs
crates/ap-error/: Cargo.toml
crates/ap-error-macro/: Cargo.toml
crates/ap-error-macro/src/: lib.rs
crates/ap-error/src/: flat_error.rs  lib.rs
crates/ap-noise/: Cargo.toml  README.md
crates/ap-noise/examples/: fingerprint_basic_handshake.rs  multidevice_transport.rs  psk_basic_handshake.rs
crates/ap-noise/src/: error.rs  handshake.rs  lib.rs  psk.rs  transport.rs
crates/ap-proxy/: README.md
crates/ap-proxy-client/: Cargo.toml  README.md
crates/ap-proxy-client/src/: config.rs  lib.rs  protocol_client.rs
crates/ap-proxy-protocol/: Cargo.toml
crates/ap-proxy-protocol/src/: auth.rs  lib.rs  rendevouz.rs
crates/ap-proxy/src/: lib.rs
crates/ap-proxy/src/server/: handler.rs  mod.rs
crates/ap-proxy/tests/: client_integration.rs
crates/ap-uniffi/: Cargo.toml  README.md
crates/ap-uniffi/src/: adapters.rs  callbacks.rs  client.rs  error.rs  lib.rs  remote_client.rs  types.rs  user_client.rs
crates/ap-uniffi/tests/: integration.rs
crates/bw-error/: Cargo.toml
crates/bw-error-macro/: Cargo.toml
crates/bw-error-macro/src/: lib.rs
crates/bw-error/src/: lib.rs
crates/bw-noise-protocol/: Cargo.toml  README.md
crates/bw-noise-protocol/examples/: fingerprint_basic_handshake.rs  multidevice_transport.rs  psk_basic_handshake.rs
crates/bw-noise-protocol/src/: error.rs  handshake.rs  lib.rs  psk.rs  transport.rs
crates/bw-proxy/: Caddyfile  Cargo.toml  Dockerfile  README.md  entrypoint.sh
crates/bw-proxy-client/: Cargo.toml  README.md
crates/bw-proxy-client/src/: config.rs  lib.rs  protocol_client.rs
crates/bw-proxy-protocol/: Cargo.toml
crates/bw-proxy-protocol/src/: auth.rs  error.rs  incoming.rs  lib.rs  messages.rs  rendevouz.rs
crates/bw-proxy/examples/: simple_client.rs
crates/bw-proxy/src/: auth.rs  connection.rs  error.rs  lib.rs  main.rs  rendevouz.rs
crates/bw-proxy/src/client/: config.rs  mod.rs  protocol_client.rs
crates/bw-proxy/src/server/: handler.rs  message_buffer.rs  mod.rs  proxy_server.rs
crates/bw-proxy/tests/: client_integration.rs
crates/bw-rat-client/: Cargo.toml
crates/bw-rat-client/src/: error.rs  lib.rs  proxy.rs  traits.rs  types.rs
crates/bw-rat-client/src/clients/: mod.rs  remote_client.rs  user_client.rs
crates/bw-rat-client/tests/: pairing.rs  websocket_proxy.rs
crates/bw-remote/: Cargo.toml
crates/bw-remote-uniffi/: Cargo.toml
crates/bw-remote-uniffi/src/: callbacks.rs  client.rs  error.rs  lib.rs  storage.rs  types.rs  user_client.rs
crates/bw-remote-uniffi/tests/: integration.rs
crates/bw-remote/src/: main.rs
crates/bw-remote/src/command/: cache.rs  connect.rs  connections.rs  listen.rs  mod.rs  output.rs  run.rs  tui.rs  tui_tracing.rs  util.rs
crates/bw-remote/src/providers/: bitwarden.rs
crates/bw-remote/src/storage/: identity_storage.rs  memory_session_store.rs  mod.rs  psk_storage.rs  session_storage.rs
examples/github-action/: README.md  reusable-psk-credential.yml
examples/js-wasm/: Cargo.toml  README.md  build.sh  package.json  vite.config.js
examples/js-wasm/src/: client.rs  lib.rs  proxy_client.rs  storage.rs  types.rs
examples/js-wasm/www/: app.js  index.html  remote-access.js
examples/python/: Cargo.toml  README.md  connect_request.py
examples/python-pyo3/: Cargo.toml  README.md  get.py  pair.py  pyproject.toml
examples/python-pyo3/src/: client.rs  lib.rs  storage.rs  types.rs
examples/python-uniffi/: .gitignore  README.md  connect_request.py  storage.py
examples/python/examples/: connect_request.py
examples/python/src/: client.rs  lib.rs  storage.rs
examples/python/src/bw_remote/: __init__.py  errors.py  identity.py  noise_handshake.py  packet.py  protocol_messages.py  proxy_client.py  psk.py  remote_client.py  session_store.py  transport.py
examples/rust-listener/: Cargo.toml
examples/rust-listener/src/: main.rs
examples/rust-remote/: Cargo.toml
examples/rust-remote/src/: main.rs
examples/shell/: get-credential.sh  psql-connect.sh  reusable-psk-connect.sh
examples/skills/agent-access/: SKILL.md
examples/skills/remote-access/: SKILL.md
examples/swift-uniffi/: .gitignore  Package.swift  README.md
examples/swift-uniffi/Sources/ApUniffiExample/: Storage.swift  main.swift
examples/swift-uniffi/Sources/CApUniffi/: module.modulemap
examples/swift/Sources/ApUniffiExample/: main.swift
examples/uniffi/: .gitignore  README.md  connect_request.py  test.py
scripts/: docker-build.sh
