[workspace]
resolver = "2"
members = [
    "crates/bw-error",
    "crates/bw-error-macro",
    "crates/bw-rat-client",
    "crates/bw-noise-protocol",
    "crates/bw-proxy",
    "crates/bw-remote",
]

[workspace.package]
version = "0.1.0"
authors = ["Bitwarden Inc"]
edition = "2024"
rust-version = "1.85"
license = "GPL-3.0"

[workspace.dependencies]
# Internal crates
bw-error = { path = "crates/bw-error", version = "0.1.0" }
bw-error-macro = { path = "crates/bw-error-macro", version = "0.1.0" }
bw-rat-client = { path = "crates/bw-rat-client", version = "0.1.0" }
bw-noise-protocol = { path = "crates/bw-noise-protocol", version = "0.1.0" }
bw-proxy = { path = "crates/bw-proxy", version = "0.1.0" }

# External dependencies
base64 = "0.22"
chacha20poly1305 = "0.10"
ciborium = "0.2"
clap = { version = "4.5", features = ["derive", "env"] }
clatter = { version = "2.0", default-features = false, features = ["getrandom", "use-rust-crypto-ml-kem", "use-25519", "use-chacha20poly1305", "use-sha"] }
color-eyre = "0.6.3"
crossterm = { version = "0.28", features = ["event-stream"] }
darling = "0.20.10"
dirs = "5.0"
futures-util = "0.3"
hex = "0.4"
hkdf = "0.12"
once_cell = "1.19"
ratatui = "0.29"
proc-macro2 = "1.0"
rand = "0.8"
quote = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
snow = { version = "0.9", features = ["xchachapoly"] }
syn = "2.0"
thiserror = "1.0"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["fmt", "env-filter"] }

[workspace.lints.clippy]
unwrap_used = "deny"
string_slice = "warn"

[profile.dev]
opt-level = 1

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
