[workspace]
resolver = "2"
members = [
    "crates/ap-error",
    "crates/ap-error-macro",
    "crates/ap-client",
    "crates/ap-noise",
    "crates/ap-proxy",
    "crates/ap-proxy-client",
    "crates/ap-proxy-protocol",
    "crates/ap-cli",
]

[workspace.package]
version = "0.3.0"
authors = ["Bitwarden Inc"]
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/bitwarden/agent-access"

[workspace.dependencies]
# Internal crates
ap-error = { path = "crates/ap-error", version = "0.3.0" }
ap-error-macro = { path = "crates/ap-error-macro", version = "0.3.0" }
ap-client = { path = "crates/ap-client", version = "0.3.0" }
ap-noise = { path = "crates/ap-noise", version = "0.3.0" }
ap-proxy = { path = "crates/ap-proxy", version = "0.3.0" }
ap-proxy-client = { path = "crates/ap-proxy-client", version = "0.3.0", default-features = false }
ap-proxy-protocol = { path = "crates/ap-proxy-protocol", version = "0.3.0" }

# External dependencies
async-trait = "0.1"
base64 = "0.22"
coset = "0.4.1"
chacha20poly1305 = "0.10"
ciborium = "0.2"
clap = { version = "4.5", features = ["derive", "env", "color"] }
clatter = { version = "2.0", default-features = false, features = ["getrandom", "use-rust-crypto-ml-kem", "use-25519", "use-chacha20poly1305", "use-sha"] }
color-eyre = "0.6.3"
crossterm = { version = "0.28", features = ["event-stream"] }
darling = "0.20.10"
dirs = "5.0"
ed25519-dalek = "2.2.0"
futures-util = "0.3"
hex = "0.4"
hkdf = "0.12"
ml-dsa = "0.0.4"
once_cell = "1.19"
ratatui = "0.29"
proc-macro2 = "1.0"
rand = "0.8"
quote = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
snow = { version = "0.9", features = ["xchachapoly"] }
syn = "2.0"
thiserror = "1.0"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = { version = "0.24" }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["fmt", "env-filter"] }

[workspace.lints.clippy]
unwrap_used = "deny"
string_slice = "warn"

[profile.dev]
opt-level = 1

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
