[package]
name = "ap-cli"
description = "Agent Access CLI"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "aac"
path = "src/main.rs"

[dependencies]
ap-noise = { workspace = true }
ap-proxy-client = { workspace = true, features = ["native-websocket"] }
ap-proxy-protocol = { workspace = true }
ap-client = { workspace = true, features = ["native-websocket"] }
async-trait = { workspace = true }
clap = { workspace = true }
color-eyre = { workspace = true }
crossterm = { workspace = true }
dirs = { workspace = true }
futures-util = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
ratatui = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
