[package]
name = "ap-client"
description = "Agent Access SDK. High-level clients for the Access Protocol."
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["native-websocket"]
native-websocket = ["ap-proxy-client/native-websocket"]

[dependencies]
async-trait = { workspace = true }
base64 = { workspace = true }
ap-error = { workspace = true }
ap-noise = { workspace = true }
ap-proxy-client = { workspace = true, default-features = false }
ap-proxy-protocol = { workspace = true }
futures-util = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { version = "1.36.0", default-features = false, features = [
    "sync",
    "macros",
] }
tracing = { workspace = true }
zeroize = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.36.0", features = ["time"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-timers = { version = "0.4", features = ["futures"] }
wasm-bindgen-futures = "0.4"
web-time = "1"

[dev-dependencies]
ap-proxy = { workspace = true }
tokio = { workspace = true, features = [
    "rt-multi-thread",
    "macros",
    "time",
    "test-util",
] }

[lints]
workspace = true
