[package]
name = "bw-noise-protocol"
description = "Noise Protocol implementation for bw_remote"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = []
experimental-post-quantum-crypto = []

[dependencies]
base64 = { workspace = true }
bw-error = { workspace = true }
chacha20poly1305 = { workspace = true }
ciborium = { workspace = true }
clatter = { workspace = true }
hex = "=0.4.3"
hkdf = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
zeroize = { version = "=1.8.2", features = ["zeroize_derive"] }

[dev-dependencies]
tokio = { version = "=1.50.0", features = ["rt", "time", "macros"] }

[lints]
workspace = true
