[package]
name = "bw-proxy"
description = "Zero-knowledge WebSocket proxy server for bw_remote"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = ["native", "experimental-post-quantum-crypto"]
experimental-post-quantum-crypto = ["bw-proxy-protocol/experimental-post-quantum-crypto"]
native = ["dep:tokio-tungstenite", "tokio/net", "tokio/signal", "tokio/time"]
wasm = []

[[bin]]
name = "bw-proxy"
path = "src/main.rs"
required-features = ["native"]

[dependencies]
bw-proxy-protocol = { workspace = true }
futures-util = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio-tungstenite = { workspace = true, optional = true }
tokio = { workspace = true, features = ["net", "signal", "sync", "time"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
bw-proxy-client = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[lints]
workspace = true
