[package]
name = "bw-proxy"
description = "Zero-knowledge WebSocket proxy server for bw_remote"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = ["experimental-post-quantum-crypto"]
experimental-post-quantum-crypto = ["bw-proxy-protocol/experimental-post-quantum-crypto"]

[[bin]]
name = "bw-proxy"
path = "src/main.rs"

[dependencies]
bw-proxy-protocol = { workspace = true }
futures-util = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["net", "signal", "sync", "time"] }
tokio-tungstenite = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
bw-proxy-client = { workspace = true, features = ["native-websocket"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[lints]
workspace = true
