[package]
name = "bw-rat-client"
description = "Noise Protocol remote client for bw_remote"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
async-trait = "0.1"
base64 = { workspace = true }
bw-error = { workspace = true }
bw-noise-protocol = { workspace = true }
bw-proxy = { path = "../bw-proxy" }
dirs = { workspace = true }
futures-util = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }

[lints]
workspace = true
