[package]
name = "bw-rat-client"
description = "Noise Protocol remote client for bw_remote"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = ["native-websocket"]
native-websocket = ["bw-proxy-client/native-websocket"]

[dependencies]
async-trait = "0.1"
base64 = { workspace = true }
bw-error = { workspace = true }
bw-noise-protocol = { workspace = true }
bw-proxy-client = { workspace = true, default-features = false }
bw-proxy-protocol = { workspace = true }
dirs = { workspace = true }
futures-util = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { version = "1.36.0", default-features = false, features = ["sync", "macros", "time"] }
tracing = { workspace = true }

[dev-dependencies]
bw-proxy = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }

[lints]
workspace = true
