[package]
name = "bw-remote-uniffi"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "GPL-3.0"
publish = false

[lib]
name = "bw_remote_uniffi"
crate-type = ["cdylib", "lib"]

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[dependencies]
bw-rat-client = { path = "../bw-rat-client", features = ["native-websocket"] }
bw-proxy-client = { path = "../bw-proxy-client", default-features = false, features = ["native-websocket"] }
bw-proxy-protocol = { path = "../bw-proxy-protocol" }
bw-noise-protocol = { path = "../bw-noise-protocol" }
dirs = "5.0"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.36.0", features = ["rt-multi-thread", "sync", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
uniffi = { version = "0.28", features = ["cli"] }

[dev-dependencies]
bw-proxy = { path = "../bw-proxy" }
tokio = { version = "1.36.0", features = ["rt-multi-thread", "sync", "macros", "time"] }

[lints.clippy]
unwrap_used = "deny"
string_slice = "warn"
