[package]
name = "bw-remote"
description = "Bitwarden Remote Client CLI"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "bw-remote"
path = "src/main.rs"

[dependencies]
bw-noise-protocol = { workspace = true }
bw-proxy-client = { workspace = true }
bw-proxy-protocol = { workspace = true }
bw-rat-client = { workspace = true }
clap = { workspace = true }
color-eyre = { workspace = true }
crossterm = { workspace = true }
dirs = { workspace = true }
futures-util = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
ratatui = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
