[package]
name = "bw-remote-wasm"
description = "WASM bindings for Bitwarden Remote Access"
version = "0.1.0"
authors = ["Bitwarden Inc"]
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
ap-client = { path = "../../crates/ap-client", default-features = false }
ap-proxy-client = { path = "../../crates/ap-proxy-client", default-features = false }
ap-proxy-protocol = { path = "../../crates/ap-proxy-protocol", default-features = false }
ap-noise = { path = "../../crates/ap-noise" }

async-trait = "0.1"
base64 = "0.22"
getrandom_02 = { package = "getrandom", version = "0.2", features = ["js"] }
getrandom = { version = "0.3", features = ["wasm_js"] }
hex = "0.4"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36.0", default-features = false, features = ["sync"] }
tracing = "0.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "BinaryType",
    "CloseEvent",
    "ErrorEvent",
    "MessageEvent",
    "Storage",
    "WebSocket",
    "Window",
    "console",
] }

[lints.clippy]
unwrap_used = "deny"
string_slice = "warn"
