[package]
name = "bw-remote-python"
description = "PyO3 Python bindings for Bitwarden Remote Access"
version = "0.1.0"
authors = ["Bitwarden Inc"]
edition = "2024"
rust-version = "1.85"
license = "GPL-3.0"
publish = false

[lib]
name = "bw_remote_rs"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
bw-rat-client = { path = "../../crates/bw-rat-client", features = ["native-websocket"] }
bw-proxy-client = { path = "../../crates/bw-proxy-client", default-features = false, features = ["native-websocket"] }
bw-proxy-protocol = { path = "../../crates/bw-proxy-protocol" }
bw-noise-protocol = { path = "../../crates/bw-noise-protocol" }
dirs = "5.0"
hex = "0.4"
pyo3 = { version = "0.24", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36.0", features = ["rt-multi-thread", "sync", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[lints.clippy]
unwrap_used = "deny"
string_slice = "warn"
