[project]
name = "bw-remote-rs"
version = "0.1.0"
description = "Python bindings for Bitwarden Remote Access (PyO3 + Rust)"
requires-python = ">=3.9"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "bw_remote_rs"
